workloads/monastery/weave-scope-app.vs.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: weave-scope-app
  namespace: monastery

spec:
  gateways: ["primary.istio-system"]
  hosts: ["monastery.stevenxie.me"]
  http:
    - rewrite:
        authority: weave-scope-app.weave-scope.global
      route:
        - destination:
            host: frps.proxy.svc.cluster.local
            port:
              number: 80
          headers:
            response:
              add:
                X-Service: frps
